RESOLVED FIXED273088
[iOS] CRASH: exception thrown from AVVideoCaptureSource::stopSession()
https://bugs.webkit.org/show_bug.cgi?id=273088
Summary [iOS] CRASH: exception thrown from AVVideoCaptureSource::stopSession()
Jer Noble
Reported 2024-04-22 13:56:58 PDT
[iOS] CRASH: exception thrown from AVVideoCaptureSource::stopSession()
Attachments
Jer Noble
Comment 1 2024-04-22 13:57:00 PDT
Jer Noble
Comment 2 2024-04-22 13:59:42 PDT
EWS
Comment 3 2024-04-23 08:28:47 PDT
Committed 277869@main (6c86b501dc6d): <https://commits.webkit.org/277869@main> Reviewed commits have been landed. Closing PR #27595 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.